--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "~4.2.4",
     "morgan": "~1.5.0",
     "node-dbf": "^0.2.1",
+    "node-thermal-printer": "^1.1.1",
     "passport": "^0.3.0",
     "passport-jwt": "^1.2.1",
     "read-dir-files": "^0.1.1"
