--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "~1.9.2",
+    "epson-thermal-printer": "^1.0.0",
     "express": "~4.9.8",
+    "js-crc": "^0.2.0",
     "jwt-simple": "^0.3.1",
     "mongoose": "~4.2.4",
     "morgan": "~1.5.0",
+    "net": "^1.0.2",
     "node-dbf": "^0.2.1",
+    "node-rest-client": "^3.1.0",
     "node-thermal-printer": "^1.1.1",
     "passport": "^0.3.0",
     "passport-jwt": "^1.2.1",
-    "read-dir-files": "^0.1.1"
+    "raw-socket": "^1.5.2",
+    "read-dir-files": "^0.1.1",
+    "serialport": "^6.0.5"
   }
 }
