--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "node-rest-auth",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "~1.9.2",
