--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
     "node-fetch": "^2.3.0",
