--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
+    "fetch-base64": "^2.1.2",
+    "googlemaps": "^1.12.0",
+    "image-to-base64": "^2.0.1",
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
     "node-fetch": "^2.3.0",
