--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
     "node-fetch": "^2.3.0",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   }
