--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
     "fetch-base64": "^2.1.2",
+    "firebase-admin": "^7.3.0",
     "googlemaps": "^1.12.0",
     "image-to-base64": "^2.0.1",
     "jwt-simple": "^0.5.6",
