--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "image-to-base64": "^2.0.1",
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
+    "monq": "^0.3.7",
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
