--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
+    "convert-excel-to-json": "^1.6.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
