--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^39.2.0",
     "googlemaps": "^1.12.0",
     "image-to-base64": "^2.0.1",
+    "json2csv": "^4.5.1",
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
     "monq": "^0.3.7",
