--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "^1.18.3",
     "convert-excel-to-json": "^1.6.1",
     "cors": "^2.8.5",
+    "dbffile": "^1.2.0",
+    "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
     "fetch-base64": "^2.1.2",
@@ -21,6 +23,7 @@
     "jwt-simple": "^0.5.6",
     "mongodb": "^3.2.3",
     "monq": "^0.3.7",
+    "node-dbf": "^0.4.0",
     "node-fetch": "^2.3.0",
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
