--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-rest-auth",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-local": "npm install && node index.js"
   },
   "dependencies": {
     "async": "^2.6.2",
