--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^39.2.0",
     "googlemaps": "^1.12.0",
     "image-to-base64": "^2.0.1",
+    "imap-simple": "^4.3.0",
     "ip": "^1.1.5",
     "json2csv": "^4.5.1",
     "jwt-simple": "^0.5.6",
