--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cote": "^0.20.0",
     "dbffile": "^1.2.0",
     "email-templates": "^6.0.0",
+    "endomondo-unofficial-api": "^1.0.68",
     "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
