--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "monq": "^0.3.7",
     "node-dbf": "^0.4.0",
     "node-fetch": "^2.3.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.1",
     "nodemailer-plugin-inline-base64": "^2.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "ping": "^0.2.2",
     "smb2": "^0.2.11",
     "xlsx": "^0.14.3"
   }
