--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^2.6.2",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
     "chokidar": "^3.0.2",
     "convert-excel-to-json": "^1.6.1",
@@ -15,6 +16,7 @@
     "dbffile": "^1.2.0",
     "email-templates": "^6.0.0",
     "endomondo-unofficial-api": "^1.0.68",
+    "epson-thermal-printer": "^1.0.0",
     "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.4",
@@ -26,12 +28,15 @@
     "image-to-base64": "^2.0.1",
     "imap-simple": "^4.3.0",
     "ip": "^1.1.5",
+    "js-crc": "^0.2.0",
     "json2csv": "^4.5.1",
     "jwt-simple": "^0.5.6",
     "local-devices": "^2.0.0",
     "macaddress": "^0.2.9",
     "mongodb": "^3.2.1",
+    "mongoose": "^5.9.4",
     "monq": "^0.3.7",
+    "morgan": "^1.9.1",
     "node-dbf": "^0.4.0",
     "node-fetch": "^2.3.0",
     "node-schedule": "^1.3.2",
@@ -40,7 +45,9 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "ping": "^0.2.2",
+    "request-promise": "^4.2.5",
     "smb2": "^0.2.11",
+    "socket.io": "^2.3.0",
     "xlsx": "^0.14.3"
   }
 }
