--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.9.4",
     "monq": "^0.3.7",
     "morgan": "^1.9.1",
+    "mustache": "^4.0.1",
     "node-dbf": "^0.4.0",
     "node-fetch": "^2.3.0",
     "node-schedule": "^1.3.2",
