--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start-local": "npm install && node index.js"
   },
   "dependencies": {
+    "@marsaud/smb2": "^0.17.1",
     "async": "^2.6.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
