--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "googlemaps": "^1.12.0",
     "image-to-base64": "^2.0.1",
     "imap-simple": "^4.3.0",
+    "in-app-purchase": "^1.11.4",
     "ip": "^1.1.5",
     "js-crc": "^0.2.0",
     "json2csv": "^4.5.1",
