--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ jspm_packages/
 results/
 temp/
 
+xrc-tracker-1553667749489-firebase-adminsdk-vb6vs-448ba1e226.json
+run
+
 # TypeScript v1 declaration files
 typings/
 
