--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "convert-excel-to-json": "^1.6.1",
     "cors": "^2.8.5",
     "cote": "^0.20.3",
+    "csv": "^5.5.0",
     "dbffile": "^1.2.0",
     "email-templates": "^6.0.0",
     "endomondo-unofficial-api": "^1.0.68",
